<resources>
    <string name="app_name">SaveInFile</string>
    <string name="edtNome">Digite seu nome</string>
    <string name="edtEmail">Digite seu email</string>
    <string name="tvLabel">Cadastro Usuário</string>
    <string name="tvLabelCnh">Possui CNH?</string>
    <string name="tvLabelSalvar">Salvar Dados: Interno ou Externo?</string>
    <string name="tvLabelSexo">Sexo</string>
    <string name="rbMasculino">Masculino</string>
    <string name="rbFeminino">Feminino</string>
    <string name="rbInterno">Interno</string>
    <string name="rbExterno">Externo</string>
    <string name="cbCnh">Sim, Possuo!</string>
    <string name="btnCadastrar">Cadastrar</string>

    <string name="tvResNome"></string>
    <string name="tvResEmail"></string>
    <string name="tvResCnh"></string>
    <string name="tvResSexo"></string>





</resources>
